Fixed alignmentof copyright in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ body{
     background-color: rgb(217, 226, 235);
 }
 
+section{
+    display: flex;
+    justify-content: center;
+}
+
 nav{
     background: rgb(109, 173, 211);
     padding: 20px;
@@ -25,10 +30,7 @@ nav{
     overflow: auto;
 }
 
-section{
-    display: flex;
-    justify-content: center;
-}
+
 
 div{
     border: 5px rgb(109, 173, 211) solid;
@@ -61,24 +63,25 @@ h2{
     bottom: 0px;
     background-color: rgb(217, 226, 235);
     border:0;
+    display: flex;
+    justify-content: center;
 }
 
 footer {
     margin: auto;
     width: 890px;
-    height: 40px;
-    text-align: center;
-    color: rgb(109, 173, 211);
-     
-}
-#footerContent{
-    float:left;
-    width: 890px;
     height: 50px;
+    color: rgb(237, 245, 253);
+    font-size: 16px;
     background-color:rgb(109, 173, 211);
-    padding:0;
+    padding-top: 10px;
     border-top: 5px lightcyan solid;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
 }
+
 
 
     
